--- a/privacy_vignette.Rmd
+++ b/privacy_vignette.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Vignette Title"
-author: "Vignette Author"
+title: "ChameleoK"
+author: "Julian Sengewald"
 date: "`r Sys.Date()`"
 output:
   prettydoc::html_pretty:
@@ -11,6 +11,8 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
+
+Functions for working with microdata so that it can be anonymized using the k-anonymity model.
 
 ![logo](logo.png)
 
